Changes to Mammoth Code View

--- a/views/mammoth.ejs
+++ b/views/mammoth.ejs
@@ -311,9 +311,9 @@
 
                 <h3 class="text-xl font-bold text-rpv-blue mt-6 mb-3 border-b pb-1">When You Arrive:</h3>
                 <ul class="list-disc ml-6 space-y-2">
-                    <li>The underground parking is located on Canyon Dr. (the 1st driveway past the FIRESIDE buildings). We have two assigned parking spaces # 35 and # 36. Please refer to the map. The keypad code is click here for code for all access doors. Our remotes and parking passes are in the unit (kitchen island drawer). Please put them back when you leave.</li>
-                    <li>All Buildings have security locks on the outside doors; the code is: click here for code</li>
-                    <li>The doors to the condos have keypad locks. click here for code</li>
+                    <li>The underground parking is located on Canyon Dr. (the 1st driveway past the FIRESIDE buildings). We have two assigned parking spaces # 35 and # 36. Please refer to the map. The keypad code is for all access doors. Our remotes and parking passes are in the unit (kitchen island drawer). Please put them back when you leave.</li>
+                    <li>All Buildings have security locks on the outside doors.</li>
+                    <li>The doors to the condos have keypad locks.</li>
                     <li>On the day you arrive:
                         <br>- decide which bedrooms and baths you will be using. If you are not going to use certain bedrooms and baths, please leave them untouched and the partnership will not be charged for cleaning them.
                         <br>- call Mammoth Reservations Maid Service at 760 934-2528 and let them know that you have arrived at Fireside #308 and #208. If you will not be using the whole unit, let them know which rooms will not be used. Give them your departure date. If you are staying the whole week try to be out before 10:00 a.m. Monday so they have time to clean for the next owners arrive.</li>
@@ -322,8 +322,8 @@
                 <h3 class="text-xl font-bold text-rpv-blue mt-6 mb-3 border-b pb-1">While you are here:</h3>
                 <ul class="list-disc ml-6 space-y-2">
                     <li>Fireside Resident Manager: If there are any immediate problems or concerns the on site manager for the property is Daniel Furness. He is in Unit 109.  The office phone number is 760 934-2781 and his cell is 760 258-6216.</li>
-                    <li>Recreation Building: A pool, jacuzzi, sauna, game room, and laundry are located in the recreation building. Click for the access code for entry.</li>
-                    <li>Ski Lockers: Our unit has assigned lockers on the first floor to store your skis and equipment. Lockers #5 and #20. Click for the combination.</li>
+                    <li>Recreation Building: A pool, jacuzzi, sauna, game room, and laundry are located in the recreation building.</li>
+                    <li>Ski Lockers: Our unit has assigned lockers on the first floor to store your skis and equipment. Lockers #5 and #20.</li>
                     <li>Fireplace: The fireplace can only be used on selected “burn days”. Call the city office at 934-8989 to check.</li>
                     <li>Firewood: Firewood is now being stored in the underground garage located in locker # 49 and # 50. We have supplied a carrier for your convenience. The keys for the lockers are in the kitchen island drawer.</li>
                     <li>Phone Calls: To reduce our phone bill please use your cell phone or a calling card for all personal or long distance calls. The phone number for our condo is 760 934-4865.</li>
@@ -364,6 +364,13 @@
                 <a href="/images/mammoth_img/Parking-Garage-Map.pdf" target="_blank"
                    class="px-4 py-2 bg-rpv-accent text-white text-sm font-bold rounded-lg shadow-md hover:opacity-90 transition duration-150 inline-block">
                     Click to download the parking map
+                </a>
+            </div>
+
+            <div class="mx-2">
+                <a href="/code"
+                   class="px-4 py-2 bg-rpv-accent text-white text-sm font-bold rounded-lg shadow-md hover:opacity-90 transition duration-150 inline-block">
+                    Click to view the security codes
                 </a>
             </div>
         
