My Final Touches

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -80,36 +80,42 @@
             
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">Shareholder Directory</h4>
-                    
-                </div>
-                
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">List/Exchange Property</h4>
-                    
-                </div>
-                
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">Management Directory</h4>
-                    
-                </div>
-                
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">Access Schedules</h4>
-                    
-                </div>
-                
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">Provide Feedback</h4>
-                    
-                </div>
+                <a href="/directory"> 
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">Shareholder Directory</h4>
+                    </div>
+                </a>
 
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
-                    <h4 class="text-xl font-semibold text-rpv-blue mb-3">Change Your Information</h4>
-                    
-                </div>
+                <a href="/schedules">
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">Access Schedules</h4>
+                    </div>
+                </a>
+
+                <a href="/exchange"> 
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">List/Exchange Property</h4>
+                    </div>
+                </a>
+
+                <a href="/info">
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">Change Your Information</h4>
+                    </div>
+                </a>
+               
+                <a href="/login">
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">Login or Create Account</h4>
+                    </div>
+                </a>
                 
+                <a href="/feedback">
+                    <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition duration-200">
+                        <h4 class="text-xl font-semibold text-rpv-blue mb-3">Provide Feedback</h4>
+                    </div>
+                </a>     
+                  
             </div>
         </div>
 
