--- a/views/mexico.ejs
+++ b/views/mexico.ejs
@@ -182,7 +182,7 @@
     <%- include('partials/navbar.ejs') %>
     
     <div class="image-container">
-        <img src="/images/mexico_img/los-cabos.jpg" alt="Photo of Hawaii landscape">
+        <img src="/images/mexico_img/los-cabos.jpg" alt="Photo of Mexico, water and rocky landscape">
         <div class="overlay-text">
             <h1 class="text-5xl sm:text-6xl font-extrabold leading-tight tracking-tight">
                 Welcome to Mexico!
