--- a/views/mammoth.ejs
+++ b/views/mammoth.ejs
@@ -179,7 +179,7 @@
     <%- include('partials/navbar.ejs') %>
     
     <div class="image-container">
-        <img src="/images/mammoth_img/california.jpg" alt="Photo of Hawaii landscape">
+        <img src="/images/mammoth_img/california.jpg" alt="Photo of Mammoth Mountains and river">
         <div class="overlay-text">
             <h1 class="text-5xl sm:text-6xl font-extrabold leading-tight tracking-tight">
                 Welcome to Mammoth!
@@ -231,52 +231,52 @@
 
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 10</div>
-                    <img src="/images/mammoth_img/download-4.jpg" alt="Stylish Living Room">
+                    <img src="/images/mammoth_img/download-4.jpg" alt="View of the Kitchen">
                 </div>
             
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 10</div>
-                    <img src="/images/mammoth_img/download-5.jpg" alt="Modern Kitchen">
+                    <img src="/images/mammoth_img/download-5.jpg" alt="View of the Livingroom">
                 </div>
             
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 10</div>
-                    <img src="/images/mammoth_img/download-3.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-3.jpg" alt="1st Bedroom - 1 bed">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 10</div>
-                    <img src="/images/mammoth_img/download-1.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-1.jpg" alt="2nd Bedroom - 2 twin beds">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 10</div>
-                    <img src="/images/mammoth_img/download-6.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-6.jpg" alt="3rd Bedroom - 1 bed">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">6 / 10</div>
-                    <img src="/images/mammoth_img/download-7.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-7.jpg" alt="View from the outside of balcony">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">7 / 10</div>
-                    <img src="/images/mammoth_img/download-2.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-2.jpg" alt="View from the outside of balcony">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">8 / 10</div>
-                    <img src="/images/mammoth_img/download-9.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-9.jpg" alt="Side view of the condo">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">9 / 10</div>
-                    <img src="/images/mammoth_img/download.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download.jpg" alt="View of parking lot and back of building">
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">10 / 10</div>
-                    <img src="/images/mammoth_img/download-8.jpg" alt="Ocean View from Balcony">
+                    <img src="/images/mammoth_img/download-8.jpg" alt="View of the mountains">
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
